--- a/src/Header.css
+++ b/src/Header.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
-@media screen and (min-width:850px) {
+@media screen and (min-width:1025px) {
     .mobileHeader {
         display: none;
     }
@@ -69,7 +69,8 @@
 
 }
 
-@media screen and (max-width: 480px)  {
+@media screen and (min-width: 320px) 
+and (max-width: 480px)  {
     .headerDesktop {
         display: none;
     }
@@ -87,7 +88,7 @@
     .mobileLogoContainer {
         background-color: transparent;
         display:flex;
-        margin-left: 99px;
+        margin-left: 100px;
         width:170px;
         height:100px;
         align-items: center;
@@ -111,14 +112,16 @@
         max-height: 90%;
         margin:auto;
         outline: none;
-    }
+        /* margin-left: */
+    }  
+
     .imgMobileMenuLogo {
         display:flex;
         flex-direction:column;
         max-width:90%;
         max-height: 90%;
         margin:auto;
-        margin-left: 30px;
+        margin-left: 37px;
     }
  
     .mobileNavbar {
@@ -131,10 +134,10 @@
     }
 
    
-   .bm-menu-wrap {
+   /* .bm-menu-wrap {
        width:100% !important;
        outline: none;
-   }
+   } */
 
     
     .buton {
@@ -157,7 +160,7 @@
     } 
 }
 
-@media screen and (min-width:481px ) and (max-width: 849px ) {
+@media screen and (min-width: 481px) and (max-width: 1024px) {
     .headerDesktop{
         display:none;
     }
@@ -235,9 +238,9 @@
         max-height: 90%;
     }
 
-    .bm-menu-wrap {
-        width:40% !important;
-    }
+    /* .bm-menu-wrap {
+        width:100% !important;
+    } */
 
     .buton {
         border: none;
