--- a/src/burgerMenu.css
+++ b/src/burgerMenu.css
@@ -36,15 +36,18 @@
   Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
   */
   .bm-menu-wrap {
+    /* margin-left: -512px; */
     width:100% !important;
+    right:0 !important;
     position: fixed;
-    height: 80%;
+    height: 100%;
     transition: none !important;
+    outline: none !important;
   }
-  .bm-menu-wrap {
+  /* .bm-menu-wrap {
     width: 100%;
     height:100%;
-  }
+  } */
   /* General sidebar styles */
   .bm-menu {
     background: black;
