--- a/src/modal.css
+++ b/src/modal.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:850px) {
+@media screen and (min-width:1025px) {
   .modal-dialog {
     display: flex;
     width: 800px;
@@ -6,7 +6,7 @@
     height:auto;
     flex-direction:row;
     justify-content: center; 
-    padding-top:170px;
+    /* padding-top:170px; */
     margin: auto;
   } 
 
@@ -41,17 +41,26 @@
  
 }
 
-@media screen and (min-width:481px) and (max-width: 849px ) {
+@media screen and (min-width: 481px) and (max-width: 1024px ) {
+  .modal {
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    vertical-align: middle;
+    align-content: center;
+  }
   .modal-dialog {
     display:flex;
     flex:1;
-    margin:auto;
+    /* margin:auto; */
+    /* margin-top:"Math.max(0, ($(window).height() - modalDialog.height()) / 2"; */
     width:500px;
     max-width: fit-content;
     height:auto;
-    padding-top:25px;
-    flex-direction: column;
-    justify-content: center;
+    /* padding-top:25px; */
+    /* flex-direction: row; */
+    align-self:center;
+    /* justify-content: center; */
   }
 
   .modal-body{
@@ -83,16 +92,19 @@
   }
 }
 
-@media screen and (max-width: 480px ) and (orientation:portrait) {
- 
+@media screen and (min-width: 320px) 
+  and (max-width: 480px) {
   .modal-dialog {
     display:flex;
-    width: 360px;
+    width:inherit;
+    /* width: 360px; */
     max-width:fit-content;
-    padding-top:150px;
+    /* padding-top:150px; */
     height: 500px;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    /* justify-content: center; */
+    align-items: center;
+    align-self: center;
     margin:auto;
     overflow: hidden;
   }
